assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&display=swap');

body {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}

/* -- Hover:css -- */
/* The following is taken from the Hover:css repository insteading of loading the cdn in my head element. This is not my css. I have linked this is my README file.  */

.hvr-fade {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    overflow: hidden;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: color, background-color;
    transition-property: color, background-color;
}

.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

/* -- Navbar -- */ 

.navbar {
    width: 100%;
    border: 0;
    margin-bottom: 0;
    background-color: #fefefa;
    padding-top: 0;
    padding-bottom: 0;
}

.navbar .navbar-brand {
    color: #cf142b;
    font-family: "Dancing Script", cursive;
    font-weight: 700px;
    font-size: 45px;
    text-decoration: none;
    letter-spacing: 4px;
    margin-left: 15px;
    overflow: visible;
}

.navbar .navbar-brand:hover, .navbar-brand:focus {
    color: #cf142b;
}

.navbar-light .navbar-nav .nav-link {
    color: #cf142b;
    font-family: 'Dancing Script', cursive;
    font-size: 25px;
    letter-spacing: 3px;
    padding: 0;
    margin-right: 25px;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #cf142b;
}

.navbar-light .navbar-nav .nav-link:focus {
    color: #cf142b;
}


.navbar .navbar-nav .active>.nav-link {
    color: #cf142b;
    text-decoration: none;
    border-bottom: 2px solid #cf142b;
}

.navbar-nav {
    margin-left: auto;
    padding-right: 5px;
}

.navbar-toggler {
    margin-right: 15px;
}

/* -- About section-- */

.image-container {
    background-image: url("../images/hero-img.jpg");
    background-position: center;
    background-repeat: no-repeat;
    min-height: 100vh;
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    overflow: hidden; 
    -webkit-background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.image-container-callout {
    color: #ffffff;
    letter-spacing: 4px;
    font-family: 'Dancing Script', cursive;
    background-color: rgba(207, 20, 43, 0.8);
    padding: 25px;
}

.about-container {
    background-color: #cf142b;
    color: #ffffff;
    padding-left: 100px;
    padding-right: 100px;
    height: 30%;
    width: 100%;
}

/* -- Trip recommendations -- */

.search-container {
    clear: both;
}

.search-container p {
    padding-right: 100px;
    padding-left: 100px;
}

#map {
    height: 100%;
}

.map-container {
    height: 500px;
    width: 700px;
    margin-left: auto;
    margin-right: auto;
}

#infowindow-content .title {
  font-weight: bold;
}

#infowindow-content {
  display: none;
}

#map #infowindow-content {
  display: inline;
}

#pac-container {

}

#pac-input {
    border: 1px solid;
    width: 700px;
}

/* -- Contact form -- */

.form-container {
    background-color: #cf142b;
    color: #ffffff;
}

.form-label {
    font-size: 25px;
}

form {
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

/* -- Footer -- */

footer {
    background-color: #242424;
    min-height: 100px;
}

footer ul {
    list-style: none;
    padding: 0;
}

footer a {
    color: #ffffff;
    font-size: 30px;
    padding-left: 3px;
    padding-right: 3px;
}

footer a:hover {
   color: #cf142b;
}

/* -- Miscellaneous -- */

.header {
    letter-spacing: 4px;
    margin-bottom: 0;
    color: #cf142b;
    font-family: 'Dancing Script', cursive;
}

.header-two {
    letter-spacing: 4px;
    margin-bottom: 0;
    color: #ffffff;
    font-family: 'Dancing Script', cursive;
}

.header-minor {
    letter-spacing: 4px;
    margin-bottom: 0;
    font-family: 'Dancing Script', cursive;
    color: #cf142b;
}

.bg-one {
    background-color: #fefefa;
}

.bg-two {
    background-color: #f7f7f2;
}

.red-btn {
    background-color: #cf142b;
    color: #ffffff;
}

.red-btn:focus {
    box-shadow: none
}

.red-btn:hover {
    color: #ffffff;
}

#scroll-up {
    display: none; 
    position: fixed; 
    bottom: 20px; 
    right: 30px; 
    z-index: 99; 
    border: none; 
    outline: none;
    background-color: #aaaaaa; 
    color: #ffffff; 
    cursor: pointer;  
    border-radius: 10px; 
    font-size: 30px; 
}

/* -- Media Queries -- */

@media screen and (max-width: 1199.98px) {

    .image-container-callout {
        width: 70%;
    }

}

@media screen and (max-width: 991.98px) {
    
    form {
        width: 80%;
    }

    .navbar-light .navbar-nav .nav-link {
        margin-left: 15px;
    }
}

@media screen and (min-width: 576px) {

    .map-container {
        height: 500px;
        width: 500px;
    }

    #pac-input {
        width: 500px;
    }
}

@media screen and (max-width: 575.98px) {
    
    .navbar .navbar-brand {
        font-size: 30px;
        margin-right: 5px;
    }
    
    .navbar-light .navbar-nav .nav-link {
        font-size: 25px;
        margin-left: 15px;
    }

    .about-container {
        padding-right: 20px;
        padding-left: 20px;
    }

    .search-container p {
        padding-right: 20px;
        padding-left: 20px;
    }

    .map-container {
        height: 300px;
        width: 300px;
    }

    #pac-input {
        width: 300px;
    }

    form {
        width: 95%;
    }

    .image-container-callout {
        width: 90%;
    }
}

